# gtk_cmake_demo

./: CMakeLists.txt  readme.md  readme_cmake.md
cario1/: CMakeLists.txt  hello1.c
hello1/: CMakeLists.txt  button1.c  hello1.c
src/: main_window.c
